--- a/examples/application-of-rp/data-flow/rp.html
+++ b/examples/application-of-rp/data-flow/rp.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Observer Design Pattern | The Case for RP</title>
+  <title>RP | Data Flow</title>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>The Case for RP</h1>
-    <h2>Observer Pattern Implementation</h2>
+    <h1>Data Flow</h1>
+    <h2>Reactive Programming</h2>
   </header>
   <div id="data">Loading...</div>
-  <script defer src="./observer.js"></script>
+  <script defer src="./rp.js"></script>
 </body>
 
 </html>
