--- a/examples/application-of-rp/event-handling/observer.html
+++ b/examples/application-of-rp/event-handling/observer.html
@@ -3,17 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Observer Design Pattern | Data Flow</title>
-  <script src="../util/observable.js"></script>
+  <title>Observer Design Pattern | Event Handling</title>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Data Flow</h1>
+    <h1>Event Handling</h1>
     <h2>Observer Design Pattern</h2>
   </header>
-  <div id="data">Loading...</div>
+  <section>
+    <header>
+      <button id="button">Log Time</button>
+    </header>
+    <ul id="log" />
+  </section>
   <script defer src="./observer.js"></script>
 </body>
 
