--- a/examples/application-of-rp/event-handling/rp.html
+++ b/examples/application-of-rp/event-handling/rp.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reactive Programming | Data Flow</title>
+  <title>Reactive Programming | Event Handling</title>
+  <script src="../vendor/bacon.js"></script>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Data Flow</h1>
+    <h1>Event Handling</h1>
     <h2>Reactive Programming</h2>
   </header>
-  <div id="data">Loading...</div>
+  <section>
+    <header>
+      <button id="button">Log Time</button>
+    </header>
+    <ul id="log" />
+  </section>
   <script defer src="./rp.js"></script>
 </body>
 
