--- a/examples/application-of-rp/uc2-event-handling/rp.html
+++ b/examples/application-of-rp/uc2-event-handling/rp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Reactive Programming | Event Handling</title>
-  <script src="../vendor/bacon.js"></script>
+  <script src="../../vendor/bacon.js"></script>
   <script src="./shared.js"></script>
 </head>
 
