--- a/examples/application-in-frontend-engineering/s1-modelling-data-flow/rp.html
+++ b/examples/application-in-frontend-engineering/s1-modelling-data-flow/rp.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reactive Programming | Data Flow</title>
+  <title>Reactive Programming | Modelling Data Flow</title>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Data Flow</h1>
+    <h1>Modelling Data Flow</h1>
     <h2>Reactive Programming</h2>
   </header>
   <div id="data">Loading...</div>
