--- a/examples/application-in-frontend-engineering/s2-handle-user-interaction/observer.html
+++ b/examples/application-in-frontend-engineering/s2-handle-user-interaction/observer.html
@@ -3,15 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Reactive Programming | Event Handling</title>
-  <script src="../../vendor/bacon.js"></script>
+  <title>Observer Design Pattern | Handle User Interaction</title>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Event Handling</h1>
-    <h2>Reactive Programming</h2>
+    <h1>Handle User Interaction</h1>
+    <h2>Observer Design Pattern</h2>
   </header>
   <section>
     <header>
@@ -19,7 +18,7 @@
     </header>
     <ul id="log" />
   </section>
-  <script defer src="./rp.js"></script>
+  <script defer src="./observer.js"></script>
 </body>
 
 </html>
