--- a/examples/application-in-frontend-engineering/s1-modelling-data-flow/observer.html
+++ b/examples/application-in-frontend-engineering/s1-modelling-data-flow/observer.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Observer Design Pattern | Data Flow</title>
+  <title>Observer Design Pattern | Modelling Data Flow</title>
   <script src="../util/observable.js"></script>
   <script src="./shared.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>Data Flow</h1>
+    <h1>Modelling Data Flow</h1>
     <h2>Observer Design Pattern</h2>
   </header>
   <div id="data">Loading...</div>
